Updated application.properties with spring actuators

--- a/myApplication/src/main/resources/application.properties
+++ b/myApplication/src/main/resources/application.properties
@@ -1,3 +1,9 @@
-spring.application.name=myApplication
-management.endpoints.web.exposure.include=health,info
+# Use wildcard "*" to expose all endpoints
+# Can also expose individual endpoints with a comma-delimited list
+
+management.endpoints.web.exposure.include=*
 management.info.env.enabled=true
+
+info.app.name=My application
+info.app.description=Application on Spring learning
+info.app.version=1.0.0
