--- a/myApplication/src/main/resources/application.properties
+++ b/myApplication/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 # Use wildcard "*" to expose all endpoints
 # Can also expose individual endpoints with a comma-delimited list
-
 management.endpoints.web.exposure.include=*
 management.info.env.enabled=true
+
+# Exclude individual endpoints with a comma-delimited list
+# management.endpoints.web.exposure.include=health,info
 
 info.app.name=My application
 info.app.description=Application on Spring learning
