--- a/myApplication/src/main/resources/application.properties
+++ b/myApplication/src/main/resources/application.properties
@@ -9,3 +9,8 @@ management.info.env.enabled=true
 info.app.name=My application
 info.app.description=Application on Spring learning
 info.app.version=1.0.0
+
+# Define my properties
+coach.name=Mickey Mouse
+coach.team=Mouse Club
+
