--- a/myApplication/src/main/resources/application.properties
+++ b/myApplication/src/main/resources/application.properties
@@ -14,3 +14,6 @@ info.app.version=1.0.0
 coach.name=Mickey Mouse
 coach.team=Mouse Club
 
+#Implementing Lazy annotation globally
+spring.main.lazy-initialization=true
+
