--- a/myApplication/src/main/resources/application.properties
+++ b/myApplication/src/main/resources/application.properties
@@ -15,5 +15,5 @@ coach.name=Mickey Mouse
 coach.team=Mouse Club
 
 #Implementing Lazy annotation globally
-spring.main.lazy-initialization=true
+# spring.main.lazy-initialization=true
 
